--- a/CSS/Buttons.css
+++ b/CSS/Buttons.css
@@ -2,7 +2,7 @@ button {
     width: 347px;
     height: 40px;
     font-size: 16px;
-    background-color: #4CAF50;
+    background-color: skyblue;
     color: white;
     border-radius: 10px;
     cursor: default;
@@ -17,7 +17,7 @@ button:hover {
     width: 690px;
     height: 30px;
 
-    background-color: #4aff8f;
+    background-color: #727373;
     padding: 5px;
     border-radius: 10px;
     margin-top: 5px;
@@ -27,8 +27,8 @@ button:hover {
     width: 221px;
     height: 30px;
     font-size: 16px;
-    background-color: red;
-    color: white;
+    background-color: white;
+    color: black;
     border-radius: 10px;
     transition: all 0.3s ease;
 }
@@ -37,8 +37,8 @@ button:hover {
     width: 221px;
     height: 30px;
     font-size: 16px;
-    background-color: red;
-    color: white;
+    background-color: white;
+    color: black;
     border-radius: 10px;
     transition: all 0.3s ease;
 }
@@ -47,8 +47,8 @@ button:hover {
     width: 221px;
     height: 30px;
     font-size: 16px;
-    background-color: red;
-    color: white;
+    background-color: white;
+    color: black;
     border-radius: 10px;
     transition: all 0.3s ease;
 }
@@ -56,7 +56,7 @@ button:hover {
 #illegalBtn:hover,
 #parkingBtn:hover,
 #clearBtn:hover {
-    background-color: rgb(165, 8, 8);
+    background-color: lightgray;
 }
 
 /* #navBtn,
