--- a/CSS/Boxes.css
+++ b/CSS/Boxes.css
@@ -1,19 +1,16 @@
 .boxContainer {
-    width: 100%; /* 전체 너비 */
-    background-color: white; /* 배경색 */
-    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1); /* 상단 그림자 */
-    z-index: 1000; /* 다른 요소 위에 표시 */
-    transition: transform 0.3s ease; /* 애니메이션 효과 */
-    transform: translateY(250px); /* 초기 위치: 숨김 상태 */
-}
-
-.boxContainer.active {
-    transform: translateY(0); /* 활성화된 상태: 보임 */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 0px;
 }
 
 .box {
-    width: 90%; /* 너비를 줄여 화면 양쪽에 여백을 줌 */
-    margin-bottom: 10px; /* 아래쪽 여백 */
+    width: 700px;
+    border: 2px solid black;
+    position: relative; 
+    margin-bottom: 0px;
 }
 
 .box1 {
@@ -21,17 +18,7 @@
     background-color: lightgray;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    cursor: pointer; /* 커서를 포인터로 변경하여 사용자에게 핸들임을 알림 */
-    user-select: none; /* 텍스트 선택 방지 */
-    touch-action: none; /* 기본 터치 액션 비활성화 */
-}
-
-/* 핸들 아이콘 스타일 추가 */
-.handle {
-    width: 100%;
-    height: 10px;
-    background-color: gray;
-    cursor: pointer;
+    border-bottom: 0px;
 }
 
 .box2 {
