--- a/CSS/ParkingInfo.css
+++ b/CSS/ParkingInfo.css
@@ -28,8 +28,9 @@ select {
     margin: 5px;
     box-sizing: border-box;
     font-size: 24px;
-    font: bolder;
     overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .inner-number {
