--- a/CSS/ParkingInfo.css
+++ b/CSS/ParkingInfo.css
@@ -81,6 +81,17 @@ select {
     border-top: 0px;
 }
 
+.inner-isNot {
+    width: 100px;
+    flex: 1;
+    font-size: 16px;
+    color: black;
+    text-align: center;
+    border: 0.5px solid black;
+    padding-top: 11px;
+    border-top: 0px;
+}
+
 .inner-time {
     flex: 1;
     font-size: 12px;
