--- a/CSS/BeArranged.css
+++ b/CSS/BeArranged.css
@@ -53,7 +53,7 @@
 }
 
 /* 모바일 */
-@media (max-width: 768px) {
+@media (max-width: 100%) {
     .title-container h1 {
         font-size: 1.5em;
     }
