--- a/CSS/Boxes.css
+++ b/CSS/Boxes.css
@@ -7,7 +7,7 @@
 }
 
 .box {
-    width: 700px;
+    width: 100%;
     border: 2px solid black;
     position: relative;
     margin-bottom: 0px;
@@ -15,6 +15,7 @@
 
 .box1 {
     height: 40px;
+    width:100%;
     background-color: lightgray;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -23,6 +24,7 @@
 
 .box2 {
     height: 250px;
+    width:100%;
     background-color: white;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
