--- a/CSS/Boxes.css
+++ b/CSS/Boxes.css
@@ -23,7 +23,7 @@
 }
 
 .box2 {
-    height: 250px;
+    height: 100%;
     width:100%;
     background-color: white;
     border-bottom-left-radius: 10px;
