--- a/CSS/ParkingInfo.css
+++ b/CSS/ParkingInfo.css
@@ -48,6 +48,8 @@ select {
     border: 0.5px solid black;
     text-align: center;
     border-right: 0px;
+    font-weight: bold;
+    
 }
 
 .inner-number {
@@ -58,8 +60,8 @@ select {
     text-align: center;
     border: 0.5px solid black;
     padding-top: 4px;
-}
 
+}
 .inner-isOpen {
     flex: 1;
     font-size: 16px;
