--- a/CSS/ParkingInfo.css
+++ b/CSS/ParkingInfo.css
@@ -1,11 +1,3 @@
-select {
-    width: 100px;
-    height: 20px;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-}
-
 .inner-info {
     display: flex;
     height: 130px;
@@ -48,7 +40,7 @@ select {
     border: 0.5px solid black;
     text-align: center;
     border-right: 0px;
-    
+
 }
 
 .inner-number {
@@ -61,6 +53,7 @@ select {
     padding-top: 4px;
 
 }
+
 .inner-isOpen {
     flex: 1;
     font-size: 16px;
@@ -113,4 +106,50 @@ select {
     border: 0.5px solid black;
     border-left: 0px;
     border-top: 0px;
+}
+
+.inner-upbox {
+    display: flex;
+    height: 25px;
+    flex-direction: row;
+    margin: 5px;
+    padding: 0px;
+    width: 250px;
+}
+
+.subtitle-box{
+    flex: 1;
+    display: inline-block;
+    height: 100%;
+    color:black;
+    margin: 5px;
+    margin-left: 10px;
+}
+
+.inner-scroll {
+    flex: 1;
+    border: 5px;
+    background-color: darkgray;
+    border-radius: 20px;
+    height: 8px;
+    width: 120px;
+    margin: 10px;
+    margin-left: 40px;
+    position: relative;
+}
+
+.filter {
+    flex: 1;
+    width: 100px;
+    height: 20px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border: 0.5px solid black;
+}
+
+.inner-upbox-row {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
