--- a/CSS/ParkingInfo.css
+++ b/CSS/ParkingInfo.css
@@ -1,11 +1,3 @@
-select {
-    width: 100px;
-    height: 20px;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-}
-
 .inner-info {
     display: flex;
     height: 130px;
@@ -42,13 +34,16 @@ select {
 .inner-title {
     flex: 1;
     font-size: 15px;
+    height:30px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
     border: 0.5px solid black;
     text-align: center;
     border-right: 0px;
-    
+    padding-top: 9px;
+    padding-left:3px;
+
 }
 
 .inner-number {
@@ -58,9 +53,10 @@ select {
     margin-top: 0px;
     text-align: center;
     border: 0.5px solid black;
-    padding-top: 4px;
+    padding-top: 9px;
 
 }
+
 .inner-isOpen {
     flex: 1;
     font-size: 16px;
@@ -78,7 +74,7 @@ select {
     color: red;
     text-align: center;
     border: 0.5px solid black;
-    padding-top: 11px;
+    padding-top: 12px;
     border-top: 0px;
 }
 
@@ -89,28 +85,76 @@ select {
     color: black;
     text-align: center;
     border: 0.5px solid black;
-    padding-top: 11px;
+    padding-top: 4px;
     border-top: 0px;
 }
 
 .inner-time {
     flex: 1;
-    font-size: 12px;
+    font-size: 11px;
     color: grey;
     margin-top: 0px;
     text-align: center;
     border: 0.5px solid black;
+    padding-top: 4px;
     border-left: 0px;
     border-top: 0px;
 }
 
 .inner-pay {
     flex: 1;
-    font-size: 12px;
+    font-size: 11px;
     color: grey;
     text-align: center;
     margin-top: 0px;
     border: 0.5px solid black;
+    padding-top: 4px;
     border-left: 0px;
     border-top: 0px;
+}
+
+.inner-upbox {
+    display: flex;
+    height: 25px;
+    flex-direction: row;
+    margin: 5px;
+    padding: 0px;
+    width: 250px;
+}
+
+.subtitle-box{
+    flex: 1;
+    display: inline-block;
+    height: 100%;
+    color:black;
+    margin: 5px;
+    margin-left: 10px;
+}
+
+.inner-scroll {
+    flex: 1;
+    border: 5px;
+    background-color: darkgray;
+    border-radius: 20px;
+    height: 8px;
+    width: 100%;
+    margin: 10px;
+    margin-left: 40px;
+    position: relative;
+}
+
+.filter {
+    flex: 1;
+    width: 100px;
+    height: 20px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border: 0.5px solid black;
+}
+
+.inner-upbox-row {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
