--- a/manual/manualCSS.css
+++ b/manual/manualCSS.css
@@ -1,3 +1,14 @@
+
+#PopupBtn{
+    width:36px;
+    padding: 0px 0px; /* 버튼 내부 여백 */
+    font-size: 10px; /* 버튼 텍스트 크기 */
+    background-color: #093a2e; /* 배경색 */
+    color: #fff; /* 텍스트 색상 */
+    border: none; /* 테두리 없애기 */
+}
+
+
 .popup {
     display: none;
     position: fixed;
@@ -8,7 +19,7 @@
     border: 1px solid #ddd;
     background-color: #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
+    z-index: 1011;
     max-width: 90%;
     max-height: 90%;
     overflow: auto;
@@ -34,7 +45,7 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
-    z-index: 999;
+    z-index: 1010;
 }
 .overlay.active {
     display: block;
