--- a/CSS/ParkingInfo.css
+++ b/CSS/ParkingInfo.css
@@ -138,7 +138,7 @@
     height: 8px;
     width: 120px;
     margin: 10px;
-    margin-left: 40px;
+    margin-right:20px;
     position: relative;
 }
 
