--- a/manual/manualCSS.css
+++ b/manual/manualCSS.css
@@ -14,6 +14,7 @@
     position: fixed;
     left: 50%;
     top: 50%;
+    width:90%;
     transform: translate(-50%, -50%);
     padding: 20px;
     border: 1px solid #ddd;
@@ -53,4 +54,18 @@
 .popup-body img {
     max-width: 100%;
     height: auto;
+}
+
+/*닫기,이전,다음 버튼*/
+#exit{
+    color:black;
+    width:20%;
+}
+#before{
+    color:black;
+    width:20%;
+}
+#next{
+    color:black;
+    width:20%;
 }
