--- a/CSS/ParkingInfo.css
+++ b/CSS/ParkingInfo.css
@@ -1,6 +1,6 @@
 .inner-info {
     display: flex;
-    height: 130px;
+    height: 150px;
     flex-direction: column;
     border: 2px solid black;
     margin: 5px;
@@ -13,7 +13,7 @@
     height: 85%;
     width: 100%;
     flex-direction: column;
-    border: 1px solid black;
+    border: none;
     margin: 0px;
     padding: 0px;
     z-index: 0;
@@ -36,7 +36,29 @@
     padding: 0px;
     width: 100%;
 }
+.inner-info3 {
+    
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    height: 30px;
+}
 
+.loadbutton{
+    background-color: yellow;
+    display: flex;
+    height: 10px;
+    width: 10px;
+    flex-direction: column;
+    border: 1px solid black;
+    margin: 0px;
+    padding: 0px;
+    z-index: 0;
+    border-radius:20px;
+    align-items: center ;
+    margin-left: auto;
+
+}
 .inner-info-row {
     display: flex;
     justify-content: space-between;
@@ -55,6 +77,7 @@
     border-right: 0px;
     padding-top: 9px;
     padding-left:3px;
+
 }
 
 .inner-number {
