--- a/manual/manualCSS.css
+++ b/manual/manualCSS.css
@@ -7,6 +7,7 @@
     background-color: #093a2e; /* 배경색 */
     color: #fff; /* 텍스트 색상 */
     border: none; /* 테두리 없애기 */
+    border-radius:5px;
 }
 
 
